// Module A 语义分类器输出 [Ref: 04_全链路通信协议矩阵 Module A/B]
// Stage1-02 占位；Domain Tag、置信度
syntax = "proto3";

package diting.classifier;

message ClassifierOutput {
  string symbol = 1;
  string domain_tag = 2;   // AGRI / TECH / GEO / UNKNOWN
  double confidence = 3;  // 0.0 - 1.0
  string correlation_id = 4;
}
